--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.18.2",
+    "@clerk/nextjs": "4.29.3",
     "@headlessui/react": "^1.7.13",
     "@hookform/resolvers": "^3.1.0",
     "@prisma/client": "^5.3.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.6",
@@ -29,7 +30,7 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
- 
+    "@uploadthing/react": "^5.2.2",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
@@ -48,25 +49,27 @@
     "superjson": "1.9.1",
     "svix": "^1.13.0",
     "tailwind-merge": "^1.14.0",
+    "uploadthing": "^5.3.3",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^10.2.2",
     "@types/eslint": "^8.21.1",
-    "@types/node": "^18.14.0",
+    "@types/node": "^18.19.3",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/tailwindcss": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
-    "autoprefixer": "^10.4.7",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.34.0",
     "eslint-config-next": "^13.2.1",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.32",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "prisma": "^5.3.1",
-    "tailwindcss": "^3.2.0",
+    "tailwindcss": "^3.3.6",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^4.9.5"
   },
